New .gif terminal animation

--- a/public/stackCMD.html
+++ b/public/stackCMD.html
@@ -178,10 +178,12 @@
                     <div class="stack">
                         <ul class="simple-typewriter">
                             <header class="header pseudo">Stack</header>
-                            <li><strong>Frontend:</strong> JavaScript, TypeScript, React, HTML, CSS, SASS</li>
-                            <li><strong>Backend:</strong> Node.js, Express</li>
-                            <li><strong>Banco de dados:</strong> MongoDB, SQL Server, SQLite, Redis</li>
-                            <li><strong>Deploy:</strong> Docker, GitHub Pages, Render, CMake</li>
+                            <li><strong>Frontend:</strong> JavaScript, TypeScript, React,</li>
+                            <li>HTML, CSS, SASS</li>
+                            <li><strong>Backend:</strong> Node.js, Express.js</li>
+                            <li><strong>Banco de dados:</strong> MongoDB, SQL Server,</li>
+                            <li>SQLite, Redis</li>
+                            <li><strong>Deploy:</strong> Docker, GitHub Pages, CMake</li>
                             <li><strong>Outras:</strong> C, Python</li>
                             <li><strong>IDE's:</strong> VS-Code, Pycharm</li>
                             <li><strong>OS:</strong> Windows, WSL, Ubuntu, Linux</li>
