--- a/public/stackCMD.html
+++ b/public/stackCMD.html
@@ -154,7 +154,7 @@
             <!-- inspired by https://github.com/Andrew6rant/Andrew6rant -->
             <div class="cmd typewriter">
                 <p>
-                    <span class="green">curl</span> <span class="get">GET</span> <span class="green">-i</span>
+                    <span class="green">curl</span> <span class="get">-X</span> <span style="color: #3b78ff;">GET</span> <span class="get">-i</span>
                     https://AdrianoLMRS/<span class="yellow">info</span></div>
                 </p><br>
                 <div id="loading" style="opacity: 0;" class="loading">loading<span class="dot">.</span><span class="dot">.</span><span class="dot">.</span></div>
