Update README.md (image-to-ascii)

--- a/public/projects.html
+++ b/public/projects.html
@@ -48,7 +48,7 @@
 </head>
 
 <body>
-    <div class="center">
+    <!-- <div class="center">
         <div class="card">
             <div class="content">
                 <header class="card-header">
@@ -56,10 +56,27 @@
                 </header>
                 <div class="card-body">
                     <div class="gif">
-                        <img src="../pousadaTao.gif" alt="Pousada TAO gif" srcset="">
+                        <img src="../public/test.gif" alt="Test gif" srcset="">
                     </div>
                     <p class="card-text"><span class='principal'>Pousada TAO</span> é uma <span class="second">Web app</span> 
                         de uma Pousada real em Campos do Jordão</p>
+                    <a href="#" class="btn btn-primary">Ver projeto</a>
+                </div>
+            </div>
+        </div>
+    </div> -->
+    <div class="center">
+        <div class="card">
+            <div class="content">
+                <header class="card-header">
+                    <h1 class="card-title">Image-to-ASCII</h1>
+                </header>
+                <div class="card-body">
+                    <div class="gif">
+                        <img src="../public/test.gif" alt="Test gif" srcset="">
+                    </div>
+                    <p class="card-text"><span class='principal'>Image to ASCII</span> é um <span class="second">script</span> 
+                        que transforma imagens reais em caracteres tipo <u>ASCII</u></p>
                     <a href="#" class="btn btn-primary">Ver projeto</a>
                 </div>
             </div>
